namespace GalleryFound.Models;

public class Magazine
{
    /// <summary>
    /// 作家
    /// </summary>
    public string Author { get; set; }

    /// <summary>
    /// 表紙画像
    /// </summary>
    public string Image { get; set; }
}
